<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/white_centered_title_toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_below="@id/toolbar"
            android:layout_above="@id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                
                <TextView
                    android:id="@+id/first_explanation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pmz_summary_first_explanation"
                    android:gravity="center"
                    android:layout_marginRight="14dp"
                    android:layout_marginLeft="14dp"
                    android:textSize="16dp"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/second_explanation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pmz_summary_second_explanation"
                    android:gravity="center"
                    android:layout_marginRight="14dp"
                    android:layout_marginLeft="14dp"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/image_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="375:110"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.3" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <RelativeLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_toLeftOf="@+id/icon_container"
                        android:layout_toStartOf="@+id/icon_container"
                        android:gravity="center_vertical"
                        android:layout_centerVertical="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12dp"
                            android:layout_marginTop="4dp"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/icon_container"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        app:cardElevation="12dp"
                        app:cardCornerRadius="40dp"
                        android:innerRadius="0dp"
                        android:layout_centerVertical="true"
                        android:shape="ring"
                        android:thicknessRatio="1.9"
                        android:layout_marginRight="17dp"
                        android:layout_marginEnd="17dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true">

                        <ImageView
                            android:id="@+id/icon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="22dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/summary_your_order_title"
                            android:textColor="@color/gray_text"
                            android:textSize="20dp"/>

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler"
                        android:layout_marginTop="24dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="22dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/summary_total_price_title"
                            android:textColor="@color/gray_text"
                            android:textSize="20dp"/>

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="$ 19.000"
                            android:textColor="@color/gray_text"
                            android:textSize="20dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"/>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="17dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="17dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/orange_rounded_button_selector"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/summary_back_button"
                android:textColor="@android:color/white"
                android:textSize="19dp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>